CSS layout issues

--- a/plugins/vue-info-wrapper/vue-info-wrapper.css
+++ b/plugins/vue-info-wrapper/vue-info-wrapper.css
@@ -1,6 +1,18 @@
 .layout-dynamic {
+
+
+  background: #fff;
+  border: 1px solid #cccccc6e;
+
   margin: 0 auto;
+  max-width: 100%;
   width: 80vw;
+  padding: 4rem;
+
+  box-shadow: 
+    0px 1px 0px -2px rgba(0, 0, 0, 0.2), 
+    0px 0px 0px 0px rgba(0, 0, 0, 0.03), 
+    0px 0px 0px 0px rgba(0, 0, 0, 0.05);  
 }
  
 .header {
@@ -8,12 +20,14 @@
   padding-bottom: 18px;
 }
 
-.title {
+h1.title {
   margin: 0;
   font-size: 32px;
   line-height: 1.1875;
   color:#4d4d4d;
   font-weight: 600;
+  font-family: 'Montserrat', sans-serif;
+  margin-bottom: 1.2rem;  
 }
 
 .subtitle {
@@ -122,10 +136,8 @@
   
   background: #fff;
 
-  margin: 0 auto;
-  margin-top: 0.2rem;
+  margin: 2rem auto;
   max-width: 100%;
-  padding: 2rem;
 
   box-shadow: 
     0px 1px 0px -2px rgba(0, 0, 0, 0.2), 
@@ -141,4 +153,11 @@
   font-size: 1.2rem;
 
   line-height: 1.5;
+}
+
+h1, h2, h3, h4, h5, h6 {
+
+    font-family: 'Montserrat', sans-serif;
+
+    margin-bottom: 1.2rem
 }
